language_tests/source_files/invalid/default_params.tr
// Test: Default parameter values cannot reference earlier parameters.
func bad(a: int32, b: int32 = a) -> int32 {
    a + b
}
